[gd_scene load_steps=3 format=3 uid="uid://bu18toot6v8df"]

[ext_resource type="Script" uid="uid://yvirhka7shwg" path="res://MainMenu/multiplayer_menu.gd" id="1_k15k0"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_clear"]
color = Color(0, 0, 0, 0)

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k15k0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -360.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 70
text = "Godot-Kicker"

[node name="Menu" type="VBoxContainer" parent="MainContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MainContainer/Menu"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_clear")

[node name="OptionNick" type="HBoxContainer" parent="MainContainer/Menu"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainContainer/Menu/OptionNick"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Nickname : "

[node name="NickInput" type="LineEdit" parent="MainContainer/Menu/OptionNick"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "YourNick"
max_length = 20
expand_to_text_length = true

[node name="OptionSkin" type="HBoxContainer" parent="MainContainer/Menu"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainContainer/Menu/OptionSkin"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Team color(Blue/Red) : "

[node name="SkinInput" type="LineEdit" parent="MainContainer/Menu/OptionSkin"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "blue"
alignment = 1
expand_to_text_length = true

[node name="OptionIP" type="HBoxContainer" parent="MainContainer/Menu"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainContainer/Menu/OptionIP"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "IP Address : "

[node name="AddressInput" type="LineEdit" parent="MainContainer/Menu/OptionIP"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "127.0.0.1"
alignment = 1
expand_to_text_length = true

[node name="OptionPort" type="HBoxContainer" parent="MainContainer/Menu"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainContainer/Menu/OptionPort"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Port : "

[node name="PortInput" type="LineEdit" parent="MainContainer/Menu/OptionPort"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "12345"
alignment = 1
expand_to_text_length = true

[node name="HSeparator2" type="HSeparator" parent="MainContainer/Menu"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_clear")

[node name="Buttons" type="HBoxContainer" parent="MainContainer/Menu"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="HostButton" type="Button" parent="MainContainer/Menu/Buttons"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.52549, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.52549, 0, 1)
theme_override_font_sizes/font_size = 35
text = "HOST"
flat = true

[node name="JoinButton" type="Button" parent="MainContainer/Menu/Buttons"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.52549, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.52549, 0, 1)
theme_override_font_sizes/font_size = 35
text = "JOIN"
flat = true

[node name="BottomRow" type="HBoxContainer" parent="MainContainer/Menu"]
layout_mode = 2
alignment = 1

[node name="QuitButton" type="Button" parent="MainContainer/Menu/BottomRow"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.858807, 0, 0, 0.862745)
theme_override_colors/font_hover_color = Color(0.858807, 0, 0, 0.862745)
theme_override_font_sizes/font_size = 35
text = "QUIT"
flat = true

[node name="StatusLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="Lobby" type="VBoxContainer" parent="MainContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Lobby" type="Label" parent="MainContainer/Lobby"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "LOBBY"
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="MainContainer/Lobby"]
layout_mode = 2

[node name="TeamsRow" type="HBoxContainer" parent="MainContainer/Lobby"]
layout_mode = 2
alignment = 1

[node name="TeamABox" type="VBoxContainer" parent="MainContainer/Lobby/TeamsRow"]
layout_mode = 2

[node name="TeamALabel" type="Label" parent="MainContainer/Lobby/TeamsRow/TeamABox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Team Blue"

[node name="TeamAList" type="ItemList" parent="MainContainer/Lobby/TeamsRow/TeamABox"]
layout_mode = 2

[node name="TeamBBox" type="VBoxContainer" parent="MainContainer/Lobby/TeamsRow"]
layout_mode = 2

[node name="TeamBLabel" type="Label" parent="MainContainer/Lobby/TeamsRow/TeamBBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Team Red"

[node name="TeamBList" type="ItemList" parent="MainContainer/Lobby/TeamsRow/TeamBBox"]
layout_mode = 2

[node name="LobbyStatusLabel" type="Label" parent="MainContainer/Lobby"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Waitingâ€¦"
horizontal_alignment = 1

[node name="LobbyButtons" type="HBoxContainer" parent="MainContainer/Lobby"]
layout_mode = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="MainContainer/Lobby/LobbyButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "START GAME"

[node name="BackButton" type="Button" parent="MainContainer/Lobby/LobbyButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "RETURN TO MENU"

[connection signal="pressed" from="MainContainer/Menu/Buttons/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainContainer/Menu/Buttons/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MainContainer/Menu/BottomRow/QuitButton" to="." method="_on_quit_pressed"]
